fix(progress-list): Hide connector on last collapsed step
Add the ams-progress-list__step--collapsed modifier class to the step
element when its panel is not expanded. Use that class in CSS to hide
the connector line when the last step is collapsed.

--- a/packages/css/src/components/progress-list/progress-list.scss
+++ b/packages/css/src/components/progress-list/progress-list.scss
@@ -127,6 +127,11 @@
   .ams-progress-list > :last-child:not(.ams-progress-list__step--has-substeps) & {
     display: none;
   }
+
+  /* Hide connector for last step when collapsed. */
+  .ams-progress-list > :last-child.ams-progress-list__step--collapsed & {
+    display: none;
+  }
 }
 
 /* Content */
